fix overflow X because of Footer

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    max-width: 500px;
+    max-width: 345px;
     margin-left: auto;
 	margin-right: auto;
     text-align: center;
