--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,7 @@
 .header h3{
     font-weight: 300;
     letter-spacing: 1px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header h2 {
@@ -20,6 +20,7 @@
 }
 .header {
     text-align: center;
+    overflow: hidden;
 }
 .header-wrapper {
     position: relative;
@@ -28,7 +29,6 @@
     padding-top: 10vh;
     padding-bottom: 1vh;
     width: 95%;
-    overflow: hidden;
 }
 .icon-wrapper{
     width: 75%;
@@ -41,7 +41,8 @@
 .programming {
     position: relative;
     max-width: 450px;
-    min-height: 675px;
+    min-height: 650px;
+    max-height: 700px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 5px;
@@ -49,8 +50,8 @@
     overflow-x: hidden;
 }
 .no-top-padding {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
     padding-left: 12px;
     padding-right: 0px;
 }
@@ -58,6 +59,4 @@ ul {
     list-style: none;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
